Center-align header wordings.

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -15,3 +15,10 @@
 //$sidebar-pad-medium: 15px;
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
+
+
+body {
+  > header {
+    text-align:center;
+  }
+}
